--- a/csv2es.ipynb
+++ b/csv2es.ipynb
@@ -11,7 +11,7 @@
     "# xinyulrsm@gmail.com\n",
     "# 07/10/2017\n",
     "\n",
-    "# example for transfer data from csv to elasticsearch\n"
+    "# an example for transfering data from csv to elasticsearch\n"
    ]
   },
   {
